fix: reduce spacing on mobile view for about page

--- a/src/pages/Misc/AboutUs/AboutUs.module.scss
+++ b/src/pages/Misc/AboutUs/AboutUs.module.scss
@@ -155,6 +155,11 @@
       .card {
         margin: 20px;
         margin-top: 0;
+        gap: 20px;
+
+        .content {
+          gap: 20px;
+        }
       }
 
       .inventBanner {
